cargo-features = ["edition2021"]

[package]
name = "rmw-utf8"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rmw-lib/rmw-utf8"
documentation = "https://docs.rs/crate/rmw-utf8"
readme = "README.md"

[dependencies]
aho-corasick = "0.7.18"
bit-vec = "0.6.3"
huffman-compress = "0.6.1"
ruzstd = "0.2.4"
speedy = "0.7.1"
utf8-width = "0.1.5"

#hashbrown = {version="0.11.2",features = ["raw","rayon","nightly","inline-more","ahash","ahash-compile-time-rng"]}
