[package]
name = "rmw-utf8"
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rmw-link/rmw-utf8"
documentation = "https://docs.rs/crate/rmw-utf8"
readme = "README.md"
description="Short text compression algorithm for utf-8 (optimized for Chinese , developed based on rust programming language). 面向utf-8的短文本压缩算法（为中文压缩优化，基于rust编程语言开发）。"

[dependencies]
aho-corasick = "0.7.18"
bit-vec = "0.6.3"
huffman-compress = "0.6.1"
lazy_static = "1.4.0"
ruzstd = "0.2.4"
speedy = "0.8.1"
utf8-width = "0.1.5"

#hashbrown = {version="0.11.2",features = ["raw","rayon","nightly","inline-more","ahash","ahash-compile-time-rng"]}
